# pc_booster_control

./: .env.robot.example  .gitignore  README.md  ROBOT_SETUP_NOTES.md  battery_soc_once  battery_soc_once.cpp  monitor_battery.expect  monitor_shutdown.sh  rtc_speak_test.sh  rtc_start_then_speak.sh
deploy/systemd/: pc_booster_conversation.service  pc_booster_web.service
docs/manuals/: K1_Instruction_Manual_V1.5_extracted.txt
piper/voices/: en_GB-jarvis-high.onnx.json  en_US-alexa-medium.onnx.json  en_US-bobby-medium.onnx.json  en_US-carl-medium.onnx.json  en_US-cortana-medium.onnx.json  en_US-eminem-medium.onnx.json  en_US-fedcomp-medium.onnx.json  en_US-glados-medium.onnx.json  en_US-patrick-medium.onnx.json  hal.onnx.json  wheatley1.onnx.json
prompts/: chatgpt_system_prompt.txt  ollama_system_prompt.txt
scripts/: chatgpt_cli.py  install_sherpa_models_robot.sh  run_conversation_daemon.sh  run_local_mac.sh  run_web_server.sh  sherpa_asr_once.py  sherpa_asr_once_mac.py  sherpa_wake_once.py
src/pc_booster_control/: package.xml  setup.cfg  setup.py
src/pc_booster_control/pc_booster_control/: __init__.py  booster_cli.py  booster_rpc.py  conversation_daemon.py  memory_store.py  web_bridge.py  web_server.py
src/pc_booster_control/pc_booster_control/static/: app.js  index.html  styles.css
src/pc_booster_control/resource/: pc_booster_control
