<?xml version="1.0"?>
<package format="3">
  <name>pc_booster_control</name>
  <version>0.1.0</version>
  <description>ROS2 helper tools for Booster K1 RPC control.</description>
  <maintainer email="">wthierry</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>booster_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
